[package]
name = "influxdb-binaries"
version = "0.1.0"
edition = "2021"

[dependencies.influxdb-common]
version = "0.1.0"
path = "../common"

[dependencies.influxdb-tsdb]
version = "0.1.0"
path = "../tsdb"

[dependencies.influxdb-storage]
version = "0.1.0"
path = "../storage"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "influxdb-tsdb-series"
path = "tsdb_series/main.rs"
doctest = false
test = false