[package]
name = "influxdb-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "influxdb_storage"

[dependencies]
bytes = "1"
serde = "1"

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["alloc"] }

thiserror = "1.0"
filepath = "0.1"

# mmap
#fmmap = { version = "0.3", features = ["tokio-async"] }
memmap2 = "0.5"

opendal = { version = "0.32", features = ["layers-tracing", "layers-metrics"] }

[dev-dependencies]
tempfile = "3.5"