[package]
name = "influxdb-tsdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "influxdb_tsdb"

[dependencies.common-base]
version = "0.1.0"
path = "../common/base"

[dependencies.common-arrow]
version = "0.1.0"
path = "../common/arrow"

[dependencies.influxdb-storage]
version = "0.1.0"
path = "../storage"

[dependencies.influxdb-utils]
version = "0.1.0"
path = "../utils"

[dependencies]
num_cpus = "1"
bytes = "1"
byteorder = "1.3"
dashmap = "5.3"
chrono = "0.4"
regex = "1"
lazy_static = "1"
trait_enum = "0.5"
anyhow = "1.0"
thiserror = "1.0"
ordered-float = { version = "3.0", default-features = false }
filepath = "0.1"
dyn-clone = "1"

murmur3 = "0.5"
crc32fast = "1.3"
snap = "1"
async-compression= {version = "0.4", features = ["tokio", "gzip"]}
#flate2 = "1.0"

# limiter
governor = "0.5"
# arena https://manishearth.github.io/blog/2021/03/15/arenas-in-rust/
bumpalo = "3.12"

tracing = "0.1"

futures = "0.3"
futures-core = "0.3"
async-trait = "0.1"
tokio = {version = "1",  features = ["full"]}

memmap2 = "0.6"
protobuf = { version = "3" }

[dev-dependencies]
rand = "0.8"
quickcheck = "1"
tempfile = "3.5"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
protobuf-codegen = "3"