[package]
name = "influxdb-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "influxdb_utils"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
twox-hash = "1.6"
hyperloglogplus = { version = "*", features = ["const-loop"] }
#leapfrog = "0.2"

rhh = { package = "rhh", git = "https://github.com/yorkart/rhh.git"}